--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: groovy
 jdk:
 - oraclejdk8
-before_istall:
+before_install:
     - sudo apt-get update -q
     - sudo apt-get install graphviz
     
