--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - rvm install 2.2.6
 - gem install travis-custom-deploy
 script:
-- TERM=dumb ./gradlew -Dorg.gradle.daemon=false asciidoctor --info --stacktrace
+- TERM=dumb ./gradlew --no-daemon asciidoctor --info --stacktrace
 after_success:
 - travis-custom-deploy sftp build/asciidoc/pdf/*.pdf
 - travis-custom-deploy sftp build/asciidoc/html5
