Fix fileTree call in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ task cleanpdf() {
 
 task bibtex() {
     doFirst {
-        def tree = fileTree(dir: 'src/docs/bibtex') {
+        def tree = fileTree('src/docs/bibtex') {
             include "**/*.bib"
         }
         def files = tree.files
