--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ asciidoctor {
 
     options doctype: 'book'
 
-    backends = ['html5']
+    backends = ['html5', 'pdf']
 
     attributes = [
         'source-highlighter': 'coderay',
