--- a/config.yaml
+++ b/config.yaml
@@ -1,25 +1,19 @@
 ---
-file: prob2_developer.adoc
-title: ProB 2.0 Developer Handbook
+file: prob_developer.adoc
+title: ProB Developer Handbook
 authors:
   - Jens Bendisposto
   - Joy Clark
+  - Michael Leuschel
 content:
-  - developer/java_api
+  - developer
   - appendix
 ---
-file: prob_tcltk.adoc
+file: prob_user_manual.adoc
 title: ProB User Manual
 authors:
+  - Jens Bendisposto
   - Michael Leuschel
 content:
   - user
   - model_examples
----
-file: prob_prolog_developer.adoc
-title: ProB Prolog Developer Handbook
-authors:
-  - Michael Leuschel
-content:
-  - developer/prolog
-  - appendix
