--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ task buildMaindocs() {
 }
 
 asciidoctor {
+    def inputDir = file("src/docs/chapter/")
     dependsOn = [bibtex, jrubyPrepare, buildMaindocs]
     requires = ['asciidoctor-diagram', 'asciidoctor-bibtex']
     gemPath = jrubyPrepare.outputDir
