--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 - sudo apt-get update -q
 - sudo apt-get install graphviz
 install:
-- rvm install 2.2.6
+- rvm install ruby --latest
 - gem install travis-custom-deploy
 script:
 - TERM=dumb ./gradlew --no-daemon asciidoctor --info --stacktrace
