--- a/build.gradle
+++ b/build.gradle
@@ -8,19 +8,19 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.6.1'
         classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-beta.8'
         classpath 'org.asciidoctor:asciidoctorj-epub3:1.5.0-alpha.9'
         classpath 'org.asciidoctor:asciidoctorj:1.6.2'
-        classpath 'com.github.jruby-gradle:jruby-gradle-plugin:1.7.0'
         classpath 'com.github.spullara.mustache.java:compiler:0.9.6'
         classpath 'org.freemarker:freemarker:2.3.29'
         classpath 'org.yaml:snakeyaml:1.25'
     }
 }
 
-apply plugin: 'org.asciidoctor.convert'
-apply plugin: 'com.github.jruby-gradle.base'
+plugins {
+    id "org.asciidoctor.convert" version "1.6.1"
+    id "com.github.jruby-gradle.base" version "1.7.0"
+}
 
 def cfg = new Configuration()
 
