--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 - rvm install ruby --latest
 - gem install travis-custom-deploy
 script:
-- TERM=dumb ./gradlew --no-daemon asciidoctor --info --stacktrace
+- ./gradlew --no-daemon asciidoctor --info --stacktrace
 after_success:
 - travis-custom-deploy sftp build/asciidoc/pdf/*.pdf
 - travis-custom-deploy sftp build/asciidoc/html5
