--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,6 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-beta.8'
-        classpath 'org.asciidoctor:asciidoctorj-epub3:1.5.0-alpha.9'
         classpath 'com.github.spullara.mustache.java:compiler:0.9.6'
         classpath 'org.freemarker:freemarker:2.3.29'
         classpath 'org.yaml:snakeyaml:1.25'
@@ -28,6 +26,9 @@ repositories {
 }
 
 dependencies {
+    asciidoctor 'org.asciidoctor:asciidoctorj-epub3:1.5.0-alpha.9'
+    asciidoctor 'org.asciidoctor:asciidoctorj-pdf:1.5.0-beta.8'
+    
     gems 'rubygems:asciidoctor-diagram:1.5.19'
     // asciidoctor-bibtex requires a 4.x version of bibtex-ruby, but for some reason the build installs a 5.x version by default.
     // To fix this we need this manual dependency on a 4.x version of bibtex-ruby.
