--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,10 @@ repositories {
 }
 
 dependencies {
+    asciidoctor 'org.asciidoctor:asciidoctorj-diagram:1.5.18'
     asciidoctor 'org.asciidoctor:asciidoctorj-epub3:1.5.0-alpha.9'
     asciidoctor 'org.asciidoctor:asciidoctorj-pdf:1.5.0-beta.8'
     
-    gems 'rubygems:asciidoctor-diagram:1.5.19'
     // asciidoctor-bibtex requires a 4.x version of bibtex-ruby, but for some reason the build installs a 5.x version by default.
     // To fix this we need this manual dependency on a 4.x version of bibtex-ruby.
     gems 'rubygems:bibtex-ruby:4.4.7'
