--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,4 +32,4 @@ upload:
     - apt-get install --assume-yes lftp
   variables:
     DEPLOY_REMOTE_BASEDIR: stupshome/stups
-  script: LFTP_PASSWORD="${DEPLOY_PASSWORD}" lftp -c "set sftp:auto-confirm yes; open --user ${DEPLOY_USERNAME} --env-password sftp://${DEPLOY_HOST}/${DEPLOY_REMOTE_BASEDIR}/handbook/; mput -e build/docs/asciidoc/pdf/*.pdf build/docs/asciidoc/html5/*.html; mput -e -O images/ build/docs/asciidoctor/html5/images/*; exit"
+  script: LFTP_PASSWORD="${DEPLOY_PASSWORD}" lftp -c "set sftp:auto-confirm yes; open --user ${DEPLOY_USERNAME} --env-password sftp://${DEPLOY_HOST}/${DEPLOY_REMOTE_BASEDIR}/handbook/prob2/; mput -e build/docs/asciidoc/pdf/*.pdf build/docs/asciidoc/html5/*.html; mput -e -O images/ build/docs/asciidoctor/html5/images/*; exit"
