--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,10 +26,10 @@ upload:
   stage: deploy
   only: 
     - master@general/stups/prob2_doc
-  image: debian:stable-slim
+  image: alpine:3
   before_script:
-    - apt-get update
-    - apt-get install --assume-yes lftp
+    - apk update
+    - apk add lftp openssh-client
   variables:
     DEPLOY_REMOTE_BASEDIR: stupshome/stups
   script: LFTP_PASSWORD="${DEPLOY_PASSWORD}" lftp -c "set sftp:auto-confirm yes; open --user ${DEPLOY_USERNAME} --env-password sftp://${DEPLOY_HOST}/${DEPLOY_REMOTE_BASEDIR}/handbook/prob2/; mput -e build/docs/asciidoc/pdf/*.pdf build/docs/asciidoc/html5/*.html; mput -e -O images/ build/docs/asciidoc/html5/images/*; exit"
