Replace the Gradle/AsciidoctorJ build with plain Asciidoctor
The Gradle-based build had multiple problems and quirks: insufficient
Java heap space when generating PDFs, bugs in the version selection for
Ruby gems, and now a JCenter outage that made the build fail completely
for a short time because some plugin dependencies couldn't be resolved.

The build is now simple enough that a plain Makefile does the job as
well, using the regular command-line version of Asciidoctor. This is
noticeably faster than the Gradle build and hopefully should be simpler
to maintain as well.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,14 @@
-variables:
-  DEBIAN_FRONTEND: noninteractive
-  GRADLE_OPTIONS: --info --stacktrace --warning-mode=all
-
-default:
-  image: openjdk:8-jdk-slim
-  cache:
-    paths:
-      - .gradle/caches
-      - .gradle/native
-      - .gradle/wrapper
-  before_script:
-    - apt-get update
-    - apt-get install --assume-yes graphviz
-    - export GRADLE_USER_HOME="${PWD}/.gradle"
-
 asciidoctor:
   stage: build
+  image: asciidoctor/docker-asciidoctor:1.34
+  before_script:
+    - apk update
+    - apk add graphviz
   script:
-    - ./gradlew ${GRADLE_OPTIONS} asciidoctor
+    - make -j2
   artifacts:
     paths:
-      - build/docs/asciidoc
+      - build
 
 upload:
   stage: deploy
@@ -32,4 +20,4 @@ upload:
     - apk add lftp openssh-client
   variables:
     DEPLOY_REMOTE_BASEDIR: stupshome/stups
-  script: LFTP_PASSWORD="${DEPLOY_PASSWORD}" lftp -c "set sftp:auto-confirm yes; open --user ${DEPLOY_USERNAME} --env-password sftp://${DEPLOY_HOST}/${DEPLOY_REMOTE_BASEDIR}/handbook/prob2/; mput -e build/docs/asciidoc/pdf/*.pdf build/docs/asciidoc/html5/*.html; mput -e -O images/ build/docs/asciidoc/html5/images/*; exit"
+  script: LFTP_PASSWORD="${DEPLOY_PASSWORD}" lftp -c "set sftp:auto-confirm yes; open --user ${DEPLOY_USERNAME} --env-password sftp://${DEPLOY_HOST}/${DEPLOY_REMOTE_BASEDIR}/handbook/prob2/; mput -e build/*.html build/*.pdf; mput -e -O images/ build/images/*; exit"
